--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- fontawesome kit -->
+<script src="https://kit.fontawesome.com/d2750a36b5.js" crossorigin="anonymous"></script>
+
   <!-- Bootstrap CSS -->
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -14,14 +17,14 @@
 
   <!-- CSS Stylesheets -->
 
-  <link rel="stylesheet" href="public/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+
 
 
 
@@ -80,45 +83,115 @@
   </section>
 
   <!-- Packages -->
-  <div class="container">
-    <section id="packages">
 
+
+  <section id="packages">
+
+    <div class="container">
       <div class="row">
 
-        <!-- Image 1 -->
-        <div class="col-lg-3 col-md-4 col-sm-6 package-image">
+        <div class="card border-light mx-0 col-lg-3 col-md-6">
+          <div class="card-header">
 
-          <img src="img/5mbps.jpg" alt="5mbps-image" width="285px" height="300px">
+            <h3>3mbps</h3>
 
+          </div>
+          <div class="card-body">
+
+            <p><i class="fas fa-check-circle"></i>Fast web browsing</p>
+            <p><i class="fas fa-check-circle"></i>UHD Movie & Music Streaming</p>
+            <p><i class="fas fa-check-circle"></i>UHD TV programming</p>
+            <p><i class="fas fa-check-circle"></i>Medium size file downloads</p>
+            <p><i class="fas fa-check-circle"></i>Suitable for 1-3 users</p>
+
+
+            <div class="rate_3mbps">
+              <hr style="height:1.5px;">
+              <h2><strong>KES 2,000</strong> / mo </h2>
+
+
+            </div>
+
+          </div>
         </div>
 
-        <!-- Image 2 -->
-        <div class="col-lg-3 col-md-4 col-sm-6 package-image">
+        <div class="card border-light mx-0 col-lg-3 col-md-6">
 
-          <img src="img/10mbps.jpg" alt="10mbps-image" width="285px" height="300px">
 
+          <div class="card-header">
+            <h3>5mbps</h3>
+
+          </div>
+          <div class="card-body">
+            <p><i class="fas fa-check-circle"></i>Fast web browsing</p>
+            <p><i class="fas fa-check-circle"></i>SD Movie & Music Streaming</p>
+            <p><i class="fas fa-check-circle"></i>SD TV programming</p>
+            <p><i class="fas fa-times-circle"></i>Multiple device Streaming</p>
+            <p><i class="fas fa-times-circle"></i>Superfast video downloads</p>
+            <p><i class="fas fa-times-circle"></i>CCTV devices capability</p>
+            <div class="rate_5mbps">
+              <hr style="height:1.5px;">
+              <h2> <strong>KES 2,500</strong> / mo (sharing)</h2>
+              <h2> <strong>KES 3,000</strong> / mo (dedicated)</h2>
+
+            </div>
+          </div>
         </div>
 
-        <!-- Image 3 -->
-        <div class="col-lg-3 col-md-4 col-sm-6 package-image">
+        <div class="card border-light mx-0 col-lg-3 col-md-6">
 
-          <img src="img/15mbps.jpg" alt="15mbps-image" width="285px" height="300px">
 
+          <div class="card-header">
+            <h3>10mbps</h3>
+
+          </div>
+          <div class="card-body">
+            <p><i class="fas fa-check-circle"></i>Fast web browsing</p>
+            <p><i class="fas fa-check-circle"></i>SD Movie & Music Streaming</p>
+            <p><i class="fas fa-check-circle"></i>HD TV programming</p>
+            <p><i class="fas fa-check-circle"></i>Multiple device Streaming</p>
+            <p><i class="fas fa-check-circle"></i>Superfast video downloads</p>
+            <p><i class="fas fa-check-circle"></i>CCTV devices capability</p>
+
+            <div class="rate_1ombps">
+              <hr style="height:1.5px;">
+              <h2> <strong>KES 3,500</strong> / mo (sharing)</h2>
+              <h2> <strong>KES 4,000</strong> / mo (dedicated)</h2>
+
+            </div>
+          </div>
         </div>
 
-        <!-- Image 4 -->
-        <div class="package-image col-lg-3 col-md-4 col-sm-6 ">
+        <div class="card border-light mx-0 col-lg-3 col-md-6">
 
-          <img src="img/20mbps.jpg" alt="20mbps-image" width="285px" height="300px">
 
+          <div class="card-header">
+            <h3>20mbps</h3>
+
+          </div>
+          <div class="card-body">
+            <p><i class="fas fa-check-circle"></i>Fast web browsing</p>
+            <p><i class="fas fa-check-circle"></i>UHD Movie & Music Streaming</p>
+            <p><i class="fas fa-check-circle"></i>UHD TV programming</p>
+            <p><i class="fas fa-check-circle"></i>Multiple device Streaming</p>
+            <p><i class="fas fa-check-circle"></i>Superfast video downloads</p>
+            <p><i class="fas fa-check-circle"></i>CCTV devices capability</p>
+
+            <div class="rate_20mbps">
+              <hr style="height:1.5px;">
+              <h2><strong>KES 7,000</strong> / mo (sharing)</h2>
+              <h2><strong>KES 8,000</strong> / mo (dedicated)</h2>
+
+            </div>
+
+
+          </div>
         </div>
-
-
-
       </div>
-  </div>
 
   </section>
+  </div>
+
 
   <!-- FAQs -->
   <section id="faq">
@@ -215,7 +288,7 @@
             <h3>Contact</h3>
             <p>
               <i class="fas fa-phone"></i>
-              0779688566 / 0776853773
+              0779688566
             </p>
 
             <p>
@@ -237,10 +310,10 @@
                   </p>
 
                   <p>
-                    <a href="#packages">Offers</a>
+                    <a class="scroll-link " href="#packages">Offers</a>
                   </p>
                   <p>
-                    <a href="#faq">FAQs</a>
+                    <a class="scroll-link " href="#faq">FAQs</a>
                   </p>
                   <p>
                     <!-- Terms & Conditions -->
